tests/baselines/reference/sourceMapValidationDestructuringParametertArrayBindingPattern(target=es2015).errors.txt
sourceMapValidationDestructuringParametertArrayBindingPattern.ts(7,15): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringParametertArrayBindingPattern.ts(11,15): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringParametertArrayBindingPattern.ts(15,15): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringParametertArrayBindingPattern.ts(19,15): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringParametertArrayBindingPattern.ts (4 errors) ====
    declare var console: {
        log(msg: any): void;
    }
    type Robot = [number, string, string];
    var robotA: Robot = [1, "mower", "mowing"];
    
    function foo1([, nameA]: Robot) {
                  ~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    
    function foo2([numberB]: Robot) {
                  ~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    
    function foo3([numberA2, nameA2, skillA2]: Robot) {
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    
    function foo4([numberA3, ...robotAInfo]: Robot) {
                  ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(robotAInfo);
    }
    
    foo1(robotA);
    foo1([2, "trimmer", "trimming"]);
    
    foo2(robotA);
    foo2([2, "trimmer", "trimming"]);
    
    foo3(robotA);
    foo3([2, "trimmer", "trimming"]);
    
    foo4(robotA);
    foo4([2, "trimmer", "trimming"]);